Copyright (C) 2018 Alpha Griffin
@%@~LICENSE~@%@

saw_073118_1 - New, longer preamble and updated opcodes.

saw_072818_2 - Add another helper function to ag.orbit.command.

saw_072818_1 - Add some wallet management functions.

saw_072718_2 - Misc. installation and documentation fixes.

saw_072718_1 - A functional token create operation.

saw_072318_2 - Updates to README and add SPECIFICATION.rst file.

saw_072318_1 - First commit for ORBIT (nothing yet).
