@@ -1,2 +1,2 @@
-__version__ = '0.3'
+__version__ = '0.4'
 
